# lazer-quest

./: README.md  codex_context_laser_investigation.md  diffraction_investigation.html  diffraction_investigation_analysis.html  diffraction_investigation_analysis.ipynb  diffraction_investigation_analysis_hardcoded.ipynb  lazer quest.xlsx  pyproject.toml  to-do.txt  to-do.txtZone.Identifier
experiments/fresnel_straight_edge/: README.md  fresnel_handout_summary.md  fresnel_pipeline.py  fresnel_straight_edge_wavelength.html  fresnel_straight_edge_wavelength.ipynb
experiments/fresnel_straight_edge/data/: experimental_data_transcribed.xlsx
lazer_quest_notebooks.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
