[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lazer-quest-notebooks"
version = "0.1.0"
description = "Notebook runtime environment for the laser diffraction investigation."
requires-python = ">=3.12"
dependencies = [
  "ipykernel>=6.29",
  "jupyterlab>=4.2",
  "matplotlib>=3.9",
  "numpy>=2.1",
  "openpyxl>=3.1",
  "pandas>=2.2",
]

[tool.setuptools]
py-modules = []
